test/conformance/chainsaw/mutate/clusterpolicy/standard/userInfo-roles-clusterRoles/chainsaw-step-01-apply-1-4.yaml
apiVersion: rbac.authorization.k8s.io/v1
kind: Role
metadata:
  name: chip-special-role
  namespace: qa
rules:
- apiGroups:
  - ""
  resources:
  - pods
  verbs:
  - get
  - create
  - list
  - watch
