test/conformance/chainsaw/mutate/clusterpolicy/standard/userInfo-roles-clusterRoles/chainsaw-step-01-apply-1-5.yaml
apiVersion: rbac.authorization.k8s.io/v1
kind: RoleBinding
metadata:
  name: chip-qa-specialrb
  namespace: qa
roleRef:
  apiGroup: rbac.authorization.k8s.io
  kind: Role
  name: chip-special-role
subjects:
- apiGroup: rbac.authorization.k8s.io
  kind: User
  name: chip
