test/conformance/chainsaw/mutate/clusterpolicy/standard/userInfo-roles-clusterRoles/policy.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: record-creation-details
spec:
  background: false
  rules:
  - match:
      any:
      - resources:
          kinds:
          - ConfigMap
    mutate:
      patchStrategicMerge:
        metadata:
          annotations:
            kyverno.io/clusterroles: '{{ request.clusterRoles | sort(@) | to_string(@)
              }}'
            kyverno.io/created-by: '{{ request.userInfo.{username: username, groups: groups} | to_string(@) }}'
            kyverno.io/roles: '{{ request.roles | sort(@) | to_string(@) }}'
    name: add-userinfo
    preconditions:
      any:
      - key: '{{request.operation || ''BACKGROUND''}}'
        operator: Equals
        value: CREATE
