test/conformance/chainsaw/mutate/clusterpolicy/standard/userInfo-roles-clusterRoles/chainsaw-step-04-assert-1-1.yaml
apiVersion: v1
data:
  foo: bar
kind: ConfigMap
metadata:
  annotations:
    kyverno.io/clusterroles: '["chip","system:basic-user","system:discovery","system:public-info-viewer"]'
    kyverno.io/created-by:
      (json_parse(@)):
        username: chip
        groups:
          - mygroup
          - system:authenticated
    kyverno.io/roles: '["qa:chip-special-role"]'
  name: foo
  namespace: qa
