test/conformance/chainsaw/mutate/clusterpolicy/standard/userInfo-roles-clusterRoles/03-create-as-chip.yaml
---
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: TestStep
metadata:
  creationTimestamp: null
  name: create-as-chip
spec:
  timeouts: {}
  try:
  - command:
      args:
      - -n
      - qa
      - create
      - cm
      - foo
      - --from-literal=foo=bar
      - --kubeconfig
      - chip-kubeconfig
      entrypoint: kubectl
